Ensure text remains visible during webfont load

--- a/assets/css/typography.css
+++ b/assets/css/typography.css
@@ -14,6 +14,7 @@
   font-weight: 400;
   src: local(""), url("/fonts/rubik-v11-latin-regular.woff2") format("woff2"),
     url("/fonts/rubik-v11-latin-regular.woff") format("woff");
+  font-display: swap;
 }
 
 @font-face {
@@ -22,6 +23,7 @@
   font-weight: 700;
   src: local(""), url("/fonts/rubik-v11-latin-700.woff2") format("woff2"),
     url("/fonts/rubik-v11-latin-700.woff") format("woff");
+  font-display: swap;
 }
 
 h1,
